--- a/404.md
+++ b/404.md
@@ -4,4 +4,4 @@ title: 404 - Page not found
 ---
 404 - Page not found
 ====================
-Sorry, we couldn’t find the requested URL. You can try again by going [back to the homepage]({{ site.baseurl }}).
+I'm not sure how you got here. Did I break something? If so, contact me! If not, stop causing trobule and go [home]({{ site.url }}).
