Added descriptions to posts

--- a/_posts/2019-03-29-hi-jimmy.md
+++ b/_posts/2019-03-29-hi-jimmy.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: Hi -Jimmy
+description: Welcome to my website!
 ---
 
 Hi and welcome to my website! I'm Jimmy Hickey. I'm a computer programmer, a hopeful statistician/data scientist, and a future PhD student. 
