--- a/_posts/2019-10-19-ST703-ANOVA.md
+++ b/_posts/2019-10-19-ST703-ANOVA.md
@@ -100,7 +100,7 @@ So the difference is $1.39 - 0.89 = 0.5$.
 ## (d)
 **Report a standard error for the difference estimated in (c).**
 
-We will again start by deriving the variance and then calculating the standard error, using the varaince estimates from (b) as needed.
+We will again start by deriving the variance and then calculating the standard error, using the variance estimates from (b) as needed.
 
 $$
 	\begin{align}
@@ -259,7 +259,7 @@ Comparing this against an $F_{19}^{2}$ distribution gives a p-value of 0.8048343
 **In an observational study to assess the effects of menopause on cholesterol levels, a researcher measured the cholesterol levels of women in seven menopausal groups. The sample means, standard deviations, and the numbers of women in each group are as follows:**
 
 
-**Note that the women were not randomly assigned to groups; they were served without experimental manipulation. Accordingly, this is an observational study. The objectives and hypotheses of interest, however , were similar to those of an experimental study with a one-way completely randomized design. For example, the investigator wanted to know whether the average of the means of the first six groups was equal to the mean of the last group; methods of testing such contrasts will be presented in Chapter 9. Using the summary statistics in the table, perform an ANOVA test to see if there are any differences between the mean cholestrol levels of the seven groups.**
+**Note that the women were not randomly assigned to groups; they were served without experimental manipulation. Accordingly, this is an observational study. The objectives and hypotheses of interest, however , were similar to those of an experimental study with a one-way completely randomized design. For example, the investigator wanted to know whether the average of the means of the first six groups was equal to the mean of the last group; methods of testing such contrasts will be presented in Chapter 9. Using the summary statistics in the table, perform an ANOVA test to see if there are any differences between the mean cholesterol levels of the seven groups.**
 
 
 $$
@@ -355,7 +355,7 @@ t = \frac{1.0625\, -1}{\sqrt{0.553 \left(\frac{1}{4}+\frac{1}{4}\right)}}
 $$
 
 
-Testing this against a $t_{n-2} = t_{9}$ distribution gives a p-value of 0.454. Using $\alpha = 0.05$, we do not have sufficient evidence to reject the null in favor of the alternative that the mean insulin release at high glucose concetration is at least one unit more than that at medium glucose concentration.
+Testing this against a $t_{n-2} = t_{9}$ distribution gives a p-value of 0.454. Using $\alpha = 0.05$, we do not have sufficient evidence to reject the null in favor of the alternative that the mean insulin release at high glucose concentration is at least one unit more than that at medium glucose concentration.
 
 ## (c)
 **Perform the hypothesis test in (b) using the confidence interval approach. Interpret the interval you construct.**
@@ -491,7 +491,7 @@ $$
 $$
 
 
-We are 95% confident the the true mean influx is between 44.3018 and 46.7816 with a dose of 100 nM.
+We are 95% confident the true mean influx is between 44.3018 and 46.7816 with a dose of 100 nM.
 
 ## (b)
 **Use the data to verify the claim that quadrupling the drug dose ($d_2/d_1=4$) will result in an increase in chemical influx of more than 5 nmol/mg protein. Answer this question using both hypothesis testing and confidence-interval approaches.**
@@ -642,8 +642,7 @@ We will use SAS to get these ANOVA tables, but they could be calculated as follo
 $$
 	\begin{array}{c c c c c c}
 		\text{Source}  & \text{d.f.} & \text{Sum of Squares} & \text{Mean Square} & \text{F-ratio} & p \text{-value}\\ \hline
-		\text{Regression} & t - 1 & \sum_{i=1}^{t} \sum_{j=1}^{n_i} (\bar{y}_{i+} - \bar{y}_{++})^2 & SSR / df_R & MSR/MSE & test\ vs\ F^{df_{reg}_{df_{error}
-		\\
+		\text{Regression} & t - 1 & \sum_{i=1}^{t} \sum_{j=1}^{n_i} (\bar{y}_{i+} - \bar{y}_{++})^2 & SSR / df_R & MSR/MSE & test\ vs\ F^{df_{reg}}_{df_{error}}\\
 		\text{Error} & \sum_{i=1}^{t} (n_i) - t & \sum_{i=1}^{t} \sum_{j=1}^{n_i} (y_{ij} - \bar{y}_{i+})^2 & SSE / df_E & & \\
 		\text{Corrected Total} & \sum_{i=1}^{t} (n_i) - 1 & \sum_{i=1}^{t} \sum_{j=1}^{n_i} (\bar{y}_{i+} - \bar{y}_{++})^2 & & & \\ \hline
 	\end{array}
